[project]
name = "pprl-service"
version = "0.1.5"
description = "HTTP-based service for performing privacy-preserving record linkage with Bloom filters."
authors = [
    {name = "Maximilian Jugl", email = "Maximilian.Jugl@medizin.uni-leipzig.de"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "pprl-model (>=0.1.6,<0.2.0)",
    "pprl-core (>=0.1.4,<0.2.0)"
]
license = "MIT"
keywords = ["record linkage", "privacy", "bloom filter", "bitarray", "cryptography", "service", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering",
    "Topic :: Security :: Cryptography"
]

[project.scripts]
pprl-service = "pprl_service.main:run_server"

[project.urls]
repository = "https://github.com/ul-mds/pprl-service"

[tool.poetry]
packages = [{ include = "pprl_service" }]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test."
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.9.0"
pytest = ">=8.3.0"
faker = "^37.0.0"
